...
        android:layout_height="match_parent"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/big_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/index" />

    </LinearLayout>
...
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        >

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="save"
        android:text="save"
        android:visibility="invisible"
        android:textSize="10sp"/>
...
