<resources>
    <string name="app_name">morning07</string>
    <string name="hint">Search images</string>
    <string name="delete_dialog_title">Delete Picture</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
